# GazeboTasks

./: .gitignore  CMakeLists.txt  build.sh  gzdaemon.sh  run.sh  start.sh  start_bridge.sh  start_gzros.sh
client/js/: player.js
rossubscriber/: CMakeLists.txt  package.xml
rossubscriber/launch/: Main.launch
rossubscriber/src/: velodyne_plugin.cc
rossubscriber/worlds/: velodyne.world
source/: velodyne.world  velodyne_plugin.cc
